feat: Agregando funcionalidad de prestamo y entrega